Very basic transformater from md to html taht handle -> Heading tags (h1, h2, ...) -> article tag at the start of it

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "rs-blog"
+name = "rs_blog"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+getset = "0.1.2"
+markdown = "1.0.0-alpha.8"
